--- a/project.json
+++ b/project.json
@@ -19,6 +19,7 @@
     "Microsoft.Extensions.Configuration.Json": "1.0.0-rc2-final",
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc2-final",
+    "Microsoft.Extensions.Configuration.Binder": "1.0.0-rc2-final",
     "BCrypt.Net-Core": "1.0.1",
     "JwtDnx": "1.0.1"
   },
