sap route, informative update

--- a/project.json
+++ b/project.json
@@ -22,6 +22,7 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc2-final",
     "Microsoft.Extensions.Configuration.Binder": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.SpaServices": "1.0.0-beta-000002",
     "BCrypt.Net-Core": "1.0.1",
     "JwtDnx": "1.0.1",
     "AutoMapper": "5.0.0-beta-1"
