--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+    "editor.tabSize": 2,
+    "files.trimTrailingWhitespace": true,
+    "editor.formatOnType": true,
     "files.exclude": {
         "**/.git": true,
         "**/.svn": true,
@@ -8,6 +11,8 @@
         "**/obj/**": true,
         "**/bin/**": true,
         "**/node_modules/**": true,
-        "**/bower_components/**": true
+        "**/bower_components/**": true,
+        "**/*.js": { "when": "$(basename).ts"},
+        "**/*.map": { "when": "$(basename)"}
     }
 }
