--- a/package.json
+++ b/package.json
@@ -1,53 +1,37 @@
 {
-  "name": "icb",
-  "version": "0.0.0",
-  "description": "ICB App",
+  "name": "churchweb",
+  "version": "1.0.0",
   "scripts": {
-    "seed": "node server/seed.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
-    "install": "./node_modules/.bin/bower install -F",
-    "postinstall": "./node_modules/.bin/gulp compile"
+    "start": "tsc && concurrently \"npm run tsc:w\" \"dotnet watch\" \"npm run lite\" ",
+    "lite": "lite-server",
+    "postinstall": "typings install",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings"
   },
-  "author": "danieloprado",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/danieloprado/icb-node"
-  },
+  "license": "ISC",
   "dependencies": {
-    "app-module-path": "^1.0.6",
-    "app-root-path": "^1.0.0",
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.15.0",
-    "connect-timeout": "^1.7.0",
-    "email-validator": "^1.0.4",
-    "express": "^4.13.4",
-    "gith": "^1.0.4",
-    "jsonwebtoken": "^5.7.0",
-    "lodash": "^4.6.1",
-    "mongoose": "^4.4.10",
-    "morgan": "^1.7.0",
-    "path": "^0.12.7",
-    "slug": "^0.9.1"
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1",
+    "systemjs": "0.19.27",
+    "core-js": "^2.4.0",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "^0.6.12",
+    "angular2-in-memory-web-api": "0.0.10",
+    "bootstrap": "^3.3.6"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "bower": "^1.7.7",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-rimraf": "^0.2.0",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3",
-    "jade": "^1.11.0",
-    "jshint": "^2.9.1",
-    "rimraf": "^2.5.2"
+    "concurrently": "^2.0.0",
+    "lite-server": "^2.2.0",
+    "typescript": "^1.8.10",
+    "typings": "^1.0.4"
   }
 }
