--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
         "**/node_modules/**": true,
         "**/bower_components/**": true,
         "**/*.js": { "when": "$(basename).ts"},
-        "**/*.map": { "when": "$(basename)"}
+        "**/*.map": { "when": "$(basename)"},
+        "wwwroot": true,
+        "typings": true
     }
 }
