--- a/package.json
+++ b/package.json
@@ -1,39 +1,36 @@
 {
-  "name": "churchweb",
-  "version": "1.0.0",
+  "name": "church-web",
+  "version": "1.0.1",
+  "description": "Church WebApp",
   "scripts": {
-    "start": "concurrently \"dotnet watch\" \"npm run lite\" ",
-    "lite": "lite-server",
-    "postinstall": "typings install",
-    "typings": "typings"
+    "seed": "node server/seed.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js",
+    "install": "./node_modules/.bin/bower install -F",
+    "postinstall": "./node_modules/.bin/gulp compile"
   },
-  "license": "ISC",
-  "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router": "2.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.1",
-    "@angular/upgrade": "2.0.0-rc.1",
-    "systemjs": "0.19.27",
-    "core-js": "^2.4.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-    "angular2-in-memory-web-api": "0.0.10",
-    "bootstrap": "^3.3.6"
+  "author": "danieloprado",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/danieloprado/icb-node"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
-    "gulp": "^3.9.1",
+    "babel-preset-es2015": "^6.3.13",
+    "bower": "^1.6.5",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.6.0",
-    "gulp-pug": "^3.0.3",
-    "lite-server": "^2.2.0",
-    "rimraf": "^2.5.2",
-    "typescript": "^1.8.10",
-    "typings": "^1.0.4"
+    "gulp-jade": "^1.1.0",
+    "gulp-jshint": "^1.12.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-rimraf": "^0.2.0",
+    "gulp-sass": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.4.2",
+    "jade": "^1.11.0",
+    "rimraf": "^2.5.1"
   }
 }
