--- a/project.json
+++ b/project.json
@@ -37,7 +37,7 @@
   },
   "tools": {
     "Microsoft.DotNet.Watcher.Tools": {
-      "version": "1.0.0-*",
+      "version": "1.0.0-preview1-final",
       "imports": "portable-net451+win8"
     },
     "Microsoft.EntityFrameworkCore.Tools": {
