--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/danieloprado/icb-node"
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.10.2",
     "babel-preset-es2015": "^6.3.13",
     "bower": "^1.6.5",
     "gulp": "^3.9.0",
