--- a/package.json
+++ b/package.json
@@ -16,23 +16,19 @@
     "url": "https://github.com/danieloprado/icb-node"
   },
   "devDependencies": {
-    "babel-plugin-transform-class-properties": "^6.10.2",
-    "babel-preset-es2015": "^6.3.13",
-    "bower": "^1.6.5",
-    "gulp": "^3.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "bower": "^1.7.9",
+    "gulp": "^3.9.1",
     "gulp-angular-templatecache": "^2.0.0",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.1",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-jshint": "^1.12.0",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.2.0",
+    "gulp-pug": "^3.0.3",
+    "gulp-jshint": "^2.0.1",
+    "gulp-load-plugins": "^1.2.4",
     "gulp-rimraf": "^0.2.0",
-    "gulp-sass": "^2.1.0",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.4.2",
-    "jade": "^1.11.0",
-    "rimraf": "^2.5.1"
+    "gulp-uglify": "^1.5.4"
   }
 }
