--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
-    "gulp-pug": "^3.0.3",
     "gulp-jshint": "^2.0.1",
     "gulp-load-plugins": "^1.2.4",
-    "gulp-rimraf": "^0.2.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-pug": "^3.0.3",
+    "gulp-replace": "^0.5.4",
+    "gulp-run-sequence": "^0.3.2",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.4"
+    "gulp-uglify": "^1.5.4",
+    "jshint": "^2.9.2",
+    "rimraf": "^2.5.2"
   }
 }
