--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-input-masks": "^2.4.0",
     "mdPickers": "^0.7.5",
     "jQuery": "^3.0.0",
-    "simplemde": "^1.11.2"
+    "simplemde": "^1.11.2",
+    "marked": "^0.3.5"
   },
   "resolutions": {
     "angular": "^1.4.0",
