--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,7 @@
     },
     "Data": {
         "DefaultConnection": {
-            "ConnectionString": "User ID=church;Password=123123;Host=localhost;Port=5432;Database=church;Pooling=true;"
+            "ConnectionString": "User ID=postgres;Password=123;Host=localhost;Port=5432;Database=church;Pooling=true;"
         }
     },
     "Logging": {
