--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "gulp-uglify": "^1.5.4",
     "jshint": "^2.9.2",
     "rimraf": "^2.5.2"
+  },
+  "dependencies": {
+    "gulp-rename": "^1.2.2"
   }
 }
